# Medicare

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tasks.json
history/prompts/cli-todo-app/: 1-cli-todo-app-implementation.tasks.prompt.md  1-cli-todo-app-plan.plan.prompt.md  1-cli-todo-app-spec.spec.prompt.md  1-cli-todo-app-tasks.tasks.prompt.md
specs/001-cli-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cli-todo-app/checklists/: requirements.md
specs/001-cli-todo-app/contracts/: task-contract.md
src/cli/: main.py
src/models/: task.py
src/services/: task_service.py
tests/contract/: test_task_contracts.py
tests/unit/: test_task.py
