[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-todo-app"
version = "0.1.0"
description = "A command-line todo application with priority management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pytest>=7.0.0"
]

[project.scripts]
todo-app = "src.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]